style: adjust total-cases font size

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                             </p>
                             <hr class="box-left-line" />
                             <p class="label">TOTAL CASES</p>
-                            <p class="value-large text-orange" id="cases-total">
+                            <p
+                                class="value-medium-large text-orange"
+                                id="cases-total"
+                            >
                                 ...
                             </p>
                             <hr class="box-left-line" />
