chore: set link to open in new tab

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
             </div>
         </main>
         <footer>
-            <p>Data from <a href="https://disease.sh">disease.sh</a></p>
+            <p>
+                Data from
+                <a href="https://disease.sh" target="_blank">disease.sh</a>
+            </p>
         </footer>
     </body>
 </html>
