feat: implement country selector

--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Thailand COVID-19 Situation</title>
+        <title>World COVID-19 Situation</title>
         <link rel="stylesheet" href="style.css" />
         <script src="app.js"></script>
     </head>
     <body>
         <header>
-            <h1>THAILAND COVID-19 SITUATION</h1>
+            <h1>WORLD COVID-19 SITUATION</h1>
         </header>
+        <nav>
+            <div class="country-selector">
+                <select id="country-selector"></select>
+            </div>
+        </nav>
         <main>
             <div class="boxes">
                 <div class="box-left">
